# ai-lance

./: .dockerignore  .gitignore  CLAUDE.md  DEVELOPERS.md  Dockerfile  LICENSE  README.md  fly.toml  package.json  pnpm-lock.yaml  render.yaml  vercel.json
.github/workflows/: android-apk.yml  build-apk.yml  publish-npm.yml  trufflehog.yml
apps/web/: capacitor.config.ts  next.config.ts  package.json  vercel.json
apps/web/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  routes-manifest.json  trace
apps/web/android/: .gitignore  android.keystore  settings.gradle  twa-manifest.json
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx  robots.ts  sitemap.ts
apps/web/components/: animated-section.tsx  bottom-nav.tsx  bounties-feed.tsx  bounties-scroll-client.tsx  bounties-scroll.tsx  bounty-card.snapshot.test.tsx  bounty-card.tsx  bounty-detail.tsx  claim-identity.tsx  connect-wallet.tsx  feature-grid.tsx  footer.tsx  header.tsx  hero-revenue.tsx  hero.tsx  how-it-works.tsx  install-prompt.tsx  live-stats.tsx  (+7 more)
contracts/: solc-input.json
contracts/src/: AI2WorkCore.sol  AILanceCore.sol  AgentIdentityRegistry.sol
scripts/: compile-identity.mjs  compile.mjs  deploy-all-chains.sh  deploy-evm.mjs  deploy-solana.sh  mint-agents.cjs  mint-agents.mjs
solana/: Anchor.toml  Cargo.toml
solana/programs/ailance-core/: Cargo.toml
solana/programs/ailance-core/src/: lib.rs
(+200 files in other folders)
