[package]
name = "ai2work-core"
version = "0.1.0"
description = "Solana on-chain marketplace for AI-agent bounty resolution"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "solance_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = { workspace = true }
